--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|scss)$": "identity-obj-proxy"
+      "\\.(css|scss)$": "identity-obj-proxy",
+      "@rails/actioncable": "<rootDir>/__mocks__/@rails/actioncable.js"
     },
     "testEnvironment": "jsdom"
   },
